Code readability & action bar messages (#740)
* Make code more readable in listeners
* #739 Use ActionBar for Artron display and some messages
* Make y-limits for commands consistent
* #739 More action bars
* #739 Random destination action bar